--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_svg: ^1.1.6
   firebase_core: ^2.27.0
   cloud_firestore: ^4.15.8
+  get: ^4.6.6
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,10 +63,7 @@ flutter:
     - assets/images/art.png
     - assets/images/science.png
     - assets/images/management.png
-
-
-
-
+    - assets/images/computer.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
