--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shimmer: ^3.0.0
   introduction_screen: ^3.1.11 # Introduction Screen
   flutter_onboarding_slider: ^1.0.11
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
