--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,8 @@
 analyzer:
   errors:
     non_constant_identifier_names: ignore
+    prefer_const_constructors: ignore
+    prefer_const_literals_to_create_immutables: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
